# ai8x-synthesis

./: .gitignore  .gitmodules  .isort.cfg  .markdownlint.yml  .pylintrc  .yamllint  KNOWN_ISSUES.txt  NOTICE.txt  README.md  ai84ize.py  ai8x-synthesis.code-workspace  ai8xize.py  apbaccess.py  assets.py  camera.py  checkpoint.py  cmsisnn.py  cnn-gen.py  commandline.py  compute.py  debugtool.py  devices.py  eprint.py  gen-ai84demos.sh  gen-blocklevel-ai85.sh  gen-catsdogs.sh  gen-cifar100-ressimplenet-ai85.sh  gen-cmsisdemos.sh  gen-demos-ai84.sh  gen-demos-ai85.sh  gen-demos-max78000.sh  gen-demos-max78002.sh  gen-powertest-ai85.sh  gen-rtlsims-ai85.sh  gen-rtlsims-ai86.sh  gen-rtlsims-ai87.sh  gen-rtlsims.sh  gen-tf-demos-max78000.sh  izer.py  kbias.py  (+45 more)
Device/: Makefile  arm_pool_q7_HWC_nonsquare.c  arm_softmax_q17p14_q15.c  arm_softmax_q8p7_q15.c  makelinks.sh  test_softmax.c  tornadocnn.h
attic/: gen-cmsisdemos.sh  gen-demos-ai84.sh  gen-rtlsims-ai84.sh  test_cmsis.py
device-ai84/: Makefile  arm_pool_nonsquare_q7_HWC_nonsquare.c  arm_softmax_q8p7_q15.c  tmr.h  tornadocnn.h
device-ai85/: global_functions.h  softmax.c  tornadocnn.h
docs/: AI84-AI85 Task List.docx  AI85 Block Diagram.graffle  AI85 Wish List.docx  AI86 Block Diagram.graffle  AI87 Block Diagram.graffle  AI8x Block Diagrams.pptx  CHW.graffle  CNNInFlight.graffle  CNNOverview.graffle  Conv2Dk1x1.graffle  DataMemory.graffle  Depthwise.xlsx  DevelopmentFlow.graffle  DevelopmentFlowColor.graffle  Energy Test Model.xlsx  HWC.graffle  KernelMemory.graffle  KernelMemoryGaps.graffle  KernelMemoryLayers.graffle  MLP.graffle  Numbers.graffle  Overview.graffle  Q17p14_2inputs_2outputs_Plus_TestVector.xlsx  RaspberryPi.md  Streaming-NextPixel.graffle  Streaming-Rows.graffle  Streaming.graffle  TornadoMemorySizer.xlsx  WSL2.md  Windows.md  abs.graffle  fireexample.graffle  fractionallystrided.graffle  gdb Primer.docx  register_map_v42.xlsx  register_map_v43.xlsx  register_map_v45.xlsx  register_map_v46.xlsx  register_map_v47.xlsx  relu.graffle  (+2 more)
hardware/: ai84.cfg  ai85.cfg  max32xxx.cfg  max78000.cfg  maxdap-pico.cfg  run-openocd-ai85  run-openocd-maxdap  run-openocd-olimex
izer/: add_fake_passthrough.py  apbaccess.py  assets.py  camera.py  checkpoint.py  cmsisnn.py  commandline.py  compute.py  console.py  datamem.py  devices.py  eprint.py  hashing.py  izer.py  kbias.py  kdedup.py  kernels.py  (+20 more)
(+1374 files in other folders)
